fix navbar booking tab overlap with log out tab

--- a/src/modules/app/css/_app.scss
+++ b/src/modules/app/css/_app.scss
@@ -350,7 +350,7 @@ select-arrows{
       text-decoration: none;
       width: 100%;
       color: $white;
-      padding:12px 15px 12px 0px;
+      padding:4% 15px 4% 0px;
       text-align: right;
   }
 
